# RUDumb

./: CMakeLists.txt  README.md  iknewitwindow.cpp  iknewitwindow.h  main.cpp  mybutton.cpp  mybutton.h  rudumbwindow.cpp  rudumbwindow.h
build-RUDumb-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-RUDumb-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-3c1cafb0771e08b0bd6c.json  directory-.-Debug-100ac1d9b5c23cd84f86.json  index-2022-08-19T13-32-09-0467.json  target-RUDumb-Debug-9b559f27a21fec99e6d7.json  target-RUDumb_autogen-Debug-05ef29f7d304f9b1e510.json  target-RUDumb_autogen_timestamp_deps-Debug-43032bdf9079ab054d83.json
build-RUDumb-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-f33f73cf25c03cbee9d3.json  cmakeFiles-v1-e932aa2a5f3030dce1ab.json  codemodel-v2-027f8d35ba7c23172f84.json  directory-.-Debug-05e39264ca8a94bb4e85.json  index-2022-08-19T07-10-33-0166.json  target-RUDumb-Debug-34110409bfa6ec840a5a.json
build-RUDumb-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-RUDumb-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-RUDumb-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: iknewitwindow.cpp.34CFD7160A985EF3.idx  iknewitwindow.h.8E912B94760FB918.idx  main.cpp.9A602FA2770B8E33.idx  mainwindow.cpp.F65238CFB8A1EA55.idx  mainwindow.h.B7FC080CC622CB14.idx  mybutton.cpp.9433F428DC03B499.idx  mybutton.h.69EACB4C0B447F70.idx  qdeadlinetimer.h.F764495D6A466152.idx  qtmetamacros.h.28FBF3655E5167F2.idx  qwidget.h.50A62C6F587747E8.idx  (+3 more)
build-RUDumb-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/RUDumb_autogen/: deps  mocs_compilation.cpp
build-RUDumb-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/RUDumb_autogen/EWIEGA46WW/: moc_iknewitwindow.cpp.d  moc_mainwindow.cpp.d  moc_rudumbwindow.cpp.d
